# overlord

./: .gitignore  AGENTS.md  Dockerfile  README.md  app.py  pyproject.toml
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  deployment.yaml  ingress.yaml  pvc.yaml  service.yaml
overlord/: __init__.py  app.py  config.py  dashboard.py  dispatcher.py  models.py  store.py  worker_events.py  worker_status.py
overlord/static/: graph.js  styles.css
overlord/templates/: index.html
scripts/: dev-server.sh
tests/: test_app.py
