[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "overlord"
version = "0.1.0"
description = "Localhost-first agent coordination app scaffold"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "jinja2>=3.1.0",
    "pydantic-settings>=2.6.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["overlord"]

[tool.pytest.ini_options]
testpaths = ["tests"]
